[gd_scene load_steps=19 format=3 uid="uid://ccqntl865eqmi"]

[ext_resource type="Script" uid="uid://b310vjoivqxkt" path="res://src/main.gd" id="1_3cfgd"]
[ext_resource type="Texture2D" uid="uid://ccx1h5wy5hil4" path="res://assets/menu/menu_background.jpeg" id="1_eewff"]
[ext_resource type="FontFile" uid="uid://bbwk4cong4hdu" path="res://assets/menu/PistonBlack-Regular.ttf" id="2_5q4o7"]
[ext_resource type="FontFile" uid="uid://3g8f8savlcdd" path="res://assets/menu/Blast Dragon D.otf" id="3_3cfgd"]
[ext_resource type="Script" uid="uid://c7iijlaa3h27k" path="res://src/menu.gd" id="3_5mrjc"]
[ext_resource type="Script" uid="uid://c4blorpi3e0sc" path="res://src/display_selector.gd" id="6_5mrjc"]
[ext_resource type="Texture2D" uid="uid://cj8dgkfb42mh2" path="res://assets/menu/ArrowsLeft.png" id="6_rlaii"]
[ext_resource type="Script" uid="uid://lc47lqwtxqj0" path="res://src/endings.gd" id="6_uewes"]
[ext_resource type="Texture2D" uid="uid://dl23ywj7qudeu" path="res://assets/menu/mystery.jpg" id="7_e7lu8"]
[ext_resource type="Texture2D" uid="uid://dmiffqtp1kn3b" path="res://assets/menu/socks.jpg" id="7_srxbw"]
[ext_resource type="Texture2D" uid="uid://c4sgw80i6d4qo" path="res://assets/menu/mortadon.jpg" id="8_d3u4l"]
[ext_resource type="Texture2D" uid="uid://cdyol6o6mtctp" path="res://assets/menu/ArrowsRight.png" id="8_kf8lf"]
[ext_resource type="AudioStream" uid="uid://ct5ooqcppe54f" path="res://assets/menu/MenuMusic.mp3" id="9_kf8lf"]
[ext_resource type="Texture2D" uid="uid://bi01tjqfsuxs5" path="res://assets/menu/maingattouz.jpg" id="9_tb146"]
[ext_resource type="Texture2D" uid="uid://dvwtibe2yccx5" path="res://assets/menu/bigfish.jpg" id="10_e7lu8"]
[ext_resource type="Texture2D" uid="uid://c6jk553dr00dk" path="res://assets/menu/asmrminotaure.jpg" id="11_okx7f"]
[ext_resource type="Texture2D" uid="uid://dtyxdrynmtx6y" path="res://assets/menu/grindr.webp" id="12_sta5p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gh0ne"]

[node name="menu" type="Node2D"]
script = ExtResource("1_3cfgd")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(572, 320.50003)
scale = Vector2(1.476804, 0.62065625)
texture = ExtResource("1_eewff")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Menu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 5.0
offset_top = 2.0
offset_right = 1154.0
offset_bottom = 648.0
script = ExtResource("3_5mrjc")

[node name="Title" type="Label" parent="UI/Menu"]
layout_mode = 0
offset_left = 488.0
offset_top = 37.0
offset_right = 890.0
offset_bottom = 105.0
theme_override_colors/font_color = Color(0.80784315, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5q4o7")
theme_override_font_sizes/font_size = 40
text = "My BestfFriend is a chair"

[node name="MainContain" type="VBoxContainer" parent="UI/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 114.0
offset_top = 132.0
offset_right = -821.0
offset_bottom = -182.0
grow_horizontal = 2
grow_vertical = 2

[node name="New game" type="Button" parent="UI/Menu/MainContain"]
layout_mode = 2
theme_override_colors/font_color = Color(0.99607843, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxEmpty_gh0ne")
text = "New Game
"
alignment = 0

[node name="Load game" type="Button" parent="UI/Menu/MainContain"]
layout_mode = 2
theme_override_colors/font_color = Color(0.99607843, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxEmpty_gh0ne")
text = "Load Game
"
alignment = 0

[node name="SettingsButton" type="Button" parent="UI/Menu/MainContain"]
layout_mode = 2
theme_override_colors/font_color = Color(0.99607843, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
theme_override_colors/icon_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxEmpty_gh0ne")
text = "Settings
"
alignment = 0

[node name="ending" type="Button" parent="UI/Menu/MainContain"]
layout_mode = 2
theme_override_colors/font_color = Color(0.99607843, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxEmpty_gh0ne")
text = "Endings"
alignment = 0

[node name="About" type="Button" parent="UI/Menu/MainContain"]
layout_mode = 2
theme_override_colors/font_color = Color(0.99607843, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxEmpty_gh0ne")
text = "About
"
alignment = 0

[node name="Quit" type="Button" parent="UI/Menu/MainContain"]
layout_mode = 2
theme_override_colors/font_color = Color(0.99607843, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxEmpty_gh0ne")
text = "Quit"
alignment = 0

[node name="Endings" type="Control" parent="UI/Menu"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("6_uewes")

[node name="next" type="Button" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 997.0
offset_top = 569.0
offset_right = 1098.0
offset_bottom = 621.0
theme_override_colors/font_color = Color(0.99607843, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxEmpty_gh0ne")
text = "Next"
alignment = 0

[node name="Quit" type="Button" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 35.0
offset_top = 569.0
offset_right = 136.0
offset_bottom = 621.0
theme_override_colors/font_color = Color(0.99607843, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxEmpty_gh0ne")
text = "Back"
alignment = 0

[node name="mystery1" type="TextureRect" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 214.0
offset_top = 66.0
offset_right = 423.0
offset_bottom = 202.0
texture = ExtResource("7_e7lu8")
expand_mode = 1

[node name="Ending1" type="TextureRect" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 215.0
offset_top = 65.0
offset_right = 422.0
offset_bottom = 201.0
texture = ExtResource("7_srxbw")
expand_mode = 1

[node name="LabelEnding1" type="Label" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 267.0
offset_top = 213.0
offset_right = 378.0
offset_bottom = 240.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "Sock ending"

[node name="Ending2" type="TextureRect" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 500.0
offset_top = 65.0
offset_right = 704.0
offset_bottom = 201.0
texture = ExtResource("8_d3u4l")
expand_mode = 1

[node name="mystery2" type="TextureRect" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 501.0
offset_top = 64.0
offset_right = 703.0
offset_bottom = 202.0
texture = ExtResource("7_e7lu8")
expand_mode = 1

[node name="LabelEnding2" type="Label" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 524.0
offset_top = 213.0
offset_right = 684.0
offset_bottom = 240.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "Mortadon ending"

[node name="Ending3" type="TextureRect" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 785.0
offset_top = 65.0
offset_right = 995.0
offset_bottom = 200.0
texture = ExtResource("9_tb146")
expand_mode = 1

[node name="LabelEnding3" type="Label" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 820.0
offset_top = 213.0
offset_right = 980.0
offset_bottom = 240.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "Main Ending"

[node name="mystery3" type="TextureRect" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 785.0
offset_top = 65.0
offset_right = 993.0
offset_bottom = 200.0
texture = ExtResource("7_e7lu8")
expand_mode = 1

[node name="Ending4" type="TextureRect" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 215.0
offset_top = 349.0
offset_right = 422.0
offset_bottom = 478.0
texture = ExtResource("10_e7lu8")
expand_mode = 1

[node name="LabelEnding4" type="Label" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 249.0
offset_top = 485.0
offset_right = 387.0
offset_bottom = 512.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "Big Fish ending"

[node name="mystery4" type="TextureRect" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 194.0
offset_top = 344.0
offset_right = 422.0
offset_bottom = 479.0
texture = ExtResource("7_e7lu8")
expand_mode = 1

[node name="Ending5" type="TextureRect" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 500.0
offset_top = 349.0
offset_right = 703.0
offset_bottom = 480.0
texture = ExtResource("11_okx7f")
expand_mode = 1

[node name="LabelEnding5" type="Label" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 523.0
offset_top = 485.0
offset_right = 687.0
offset_bottom = 512.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "Minotaure ending"

[node name="mystery5" type="TextureRect" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 499.0
offset_top = 349.0
offset_right = 704.0
offset_bottom = 479.0
texture = ExtResource("7_e7lu8")
expand_mode = 1

[node name="Ending6" type="TextureRect" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 785.0
offset_top = 349.0
offset_right = 988.0
offset_bottom = 475.0
texture = ExtResource("12_sta5p")
expand_mode = 1

[node name="mystery6" type="TextureRect" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 784.0
offset_top = 347.0
offset_right = 989.0
offset_bottom = 473.0
texture = ExtResource("7_e7lu8")
expand_mode = 1

[node name="LabelEnding6" type="Label" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 816.0
offset_top = 492.0
offset_right = 954.0
offset_bottom = 519.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "Grindr ending"

[node name="Endings2" type="Control" parent="UI/Menu"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="previous" type="Button" parent="UI/Menu/Endings2"]
layout_mode = 0
offset_left = 35.0
offset_top = 569.0
offset_right = 136.0
offset_bottom = 621.0
theme_override_colors/font_color = Color(0.99607843, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxEmpty_gh0ne")
text = "Previous"
alignment = 0

[node name="mystery1" type="TextureRect" parent="UI/Menu/Endings2"]
layout_mode = 0
offset_left = 214.0
offset_top = 66.0
offset_right = 423.0
offset_bottom = 202.0
texture = ExtResource("7_e7lu8")
expand_mode = 1

[node name="LabelEnding1" type="Label" parent="UI/Menu/Endings2"]
layout_mode = 0
offset_left = 267.0
offset_top = 213.0
offset_right = 378.0
offset_bottom = 240.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "INSERT"

[node name="mystery2" type="TextureRect" parent="UI/Menu/Endings2"]
layout_mode = 0
offset_left = 501.0
offset_top = 64.0
offset_right = 703.0
offset_bottom = 202.0
texture = ExtResource("7_e7lu8")
expand_mode = 1

[node name="LabelEnding2" type="Label" parent="UI/Menu/Endings2"]
layout_mode = 0
offset_left = 524.0
offset_top = 213.0
offset_right = 684.0
offset_bottom = 240.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "INSERT"

[node name="LabelEnding3" type="Label" parent="UI/Menu/Endings2"]
layout_mode = 0
offset_left = 820.0
offset_top = 213.0
offset_right = 980.0
offset_bottom = 240.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "INSERT"

[node name="mystery3" type="TextureRect" parent="UI/Menu/Endings2"]
layout_mode = 0
offset_left = 785.0
offset_top = 65.0
offset_right = 993.0
offset_bottom = 200.0
texture = ExtResource("7_e7lu8")
expand_mode = 1

[node name="LabelEnding4" type="Label" parent="UI/Menu/Endings2"]
layout_mode = 0
offset_left = 249.0
offset_top = 485.0
offset_right = 387.0
offset_bottom = 512.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "INSERT"

[node name="mystery4" type="TextureRect" parent="UI/Menu/Endings2"]
layout_mode = 0
offset_left = 194.0
offset_top = 344.0
offset_right = 422.0
offset_bottom = 479.0
texture = ExtResource("7_e7lu8")
expand_mode = 1

[node name="LabelEnding5" type="Label" parent="UI/Menu/Endings2"]
layout_mode = 0
offset_left = 523.0
offset_top = 485.0
offset_right = 687.0
offset_bottom = 512.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "INSERT"

[node name="mystery5" type="TextureRect" parent="UI/Menu/Endings2"]
layout_mode = 0
offset_left = 499.0
offset_top = 349.0
offset_right = 704.0
offset_bottom = 479.0
texture = ExtResource("7_e7lu8")
expand_mode = 1

[node name="mystery6" type="TextureRect" parent="UI/Menu/Endings2"]
layout_mode = 0
offset_left = 784.0
offset_top = 347.0
offset_right = 989.0
offset_bottom = 473.0
texture = ExtResource("7_e7lu8")
expand_mode = 1

[node name="LabelEnding6" type="Label" parent="UI/Menu/Endings2"]
layout_mode = 0
offset_left = 816.0
offset_top = 492.0
offset_right = 954.0
offset_bottom = 519.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "INSERT"

[node name="DisplaySelector" type="Control" parent="UI/Menu"]
visible = false
anchors_preset = 0
offset_top = 3.0
offset_right = 40.0
offset_bottom = 43.0
script = ExtResource("6_5mrjc")

[node name="Display" type="Label" parent="UI/Menu/DisplaySelector"]
layout_mode = 0
offset_left = 348.0
offset_top = 118.0
offset_right = 562.0
offset_bottom = 151.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 24
text = "Display"
text_direction = 1

[node name="Label_Display" type="Label" parent="UI/Menu/DisplaySelector"]
layout_mode = 0
offset_left = 348.0
offset_top = 159.0
offset_right = 424.0
offset_bottom = 185.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 19
text = "Window"

[node name="Label_Volume" type="Label" parent="UI/Menu/DisplaySelector"]
layout_mode = 0
offset_left = 348.0
offset_top = 200.0
offset_right = 420.0
offset_bottom = 226.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 19
text = "Volume"

[node name="LeftArrow" type="TextureButton" parent="UI/Menu/DisplaySelector"]
layout_mode = 1
anchors_preset = -1
anchor_left = 11.575001
anchor_top = 4.0
anchor_right = 11.875001
anchor_bottom = 4.525
offset_left = -3.0517578e-05
offset_right = -3.0517578e-05
size_flags_stretch_ratio = 0.5
texture_normal = ExtResource("6_rlaii")

[node name="RightArrow" type="TextureButton" parent="UI/Menu/DisplaySelector"]
layout_mode = 1
anchors_preset = -1
anchor_left = 12.475
anchor_top = 4.025
anchor_right = 12.625001
anchor_bottom = 4.55
offset_left = -6.0
offset_right = -3.0517578e-05
texture_normal = ExtResource("8_kf8lf")

[connection signal="pressed" from="UI/Menu/MainContain/New game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="UI/Menu/MainContain/SettingsButton" to="UI/Menu" method="_on_settings_button_pressed"]
[node name="VolumeSlider" type="HSlider" parent="UI/Menu/DisplaySelector"]
layout_mode = 0
offset_left = 463.0
offset_top = 200.0
offset_right = 591.0
offset_bottom = 228.0
value = 50.0

[node name="MusicPlayer" type="AudioStreamPlayer" parent="UI/Menu"]
stream = ExtResource("9_kf8lf")

[connection signal="pressed" from="UI/Menu/MainContain/New game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="UI/Menu/MainContain/SettingsButton" to="UI/Menu" method="_on_settings_button_pressed"]
[connection signal="pressed" from="UI/Menu/MainContain/ending" to="UI/Menu" method="_on_ending_pressed"]
[connection signal="pressed" from="UI/Menu/MainContain/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="UI/Menu/Endings/next" to="UI/Menu" method="_on_next_pressed"]
[connection signal="pressed" from="UI/Menu/Endings/Quit" to="UI/Menu" method="_on_quit_pressed"]
[connection signal="pressed" from="UI/Menu/Endings2/previous" to="UI/Menu" method="_on_previous_pressed"]
[connection signal="value_changed" from="UI/Menu/DisplaySelector/VolumeSlider" to="UI/Menu" method="_on_h_slider_value_changed"]
